# deldupes

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: USAGE.md  specs.md
src/: check.rs  codec.rs  db.rs  dbpath.rs  delete.rs  dupe_groups.rs  dupes.rs  file_meta.rs  hashing.rs  logging.rs  main.rs  path_filter.rs  path_utils.rs  potential.rs  scan.rs  schema.rs  stats.rs  types.rs  util.rs
